Redefine __i686 for use with older compilers.

This is a conservative fix for BZ #411 which is already fixed
on trunk. In this fix we don't touch any of the thunks or
do any other work other than to redefine the compiler define.
This is the minimum change required to build on a broader range
of distributions.